public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/821/source/compile
source.c:35:2: error: expected identifier or ‘(’ before ‘}’ token
  }
  ^
source.c:40:2: error: expected identifier or ‘(’ before ‘return’
  return 0;
  ^
source.c:41:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
